crates/aes_parser/src/parser/snapshots/aes_parser__parser__tests__snapshots__lexer_errors__diag_bad_slash.snap
---
source: crates/aes_parser/src/parser/tests.rs
expression: "aes_testing::render_diagnostics(source, &reporter.diagnostics)"
---
aes::lexer(unexpected_character)

  × unexpected character
   ╭─[test.aes:2:11]
 1 │ type t {
 2 │   let x = / user;
   ·           ┬
   ·           ╰── not valid here
 3 │ }
   ╰────
