crates/aes_parser/src/parser/snapshots/aes_parser__parser__tests__snapshots__lexer_errors__diag_digit_start.snap
---
source: crates/aes_parser/src/parser/tests.rs
expression: "aes_testing::render_diagnostics(source, &reporter.diagnostics)"
---
aes::lexer(unexpected_character)

  × unexpected character
   ╭─[test.aes:2:11]
 1 │ type t {
 2 │   let x = 42user;
   ·           ┬
   ·           ╰── not valid here
 3 │ }
   ╰────

---

aes::lexer(unexpected_character)

  × unexpected character
   ╭─[test.aes:2:12]
 1 │ type t {
 2 │   let x = 42user;
   ·            ┬
   ·            ╰── not valid here
 3 │ }
   ╰────
